tests/assembler/pass/test29.ial
function ssa void foo()
{
    block entry
    {
    }
}
