tests/assembler/fail/test18.ial
function void volatile_attr()
{
    block entry
    {
        volatile;
    }
}
